[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "hdlConvertorAst"
version = "1.2"
dependencies = []
requires-python = ">=3.8"
authors = [
  {name = "Michal Orsak", email = "Nic30original@gmail.com"},
]

description = "A library of AST nodes for HDL languages (Verilog, VHDL, ...) and transpiler/compiler utilities"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
 'hdl', 'vhdl', 'verilog', 'systemverilog',
 'parser', 'preprocessor', 'antlr4', 'ast', 'code-generator']
classifiers = [
  'Development Status :: 4 - Beta',
  'Intended Audience :: Developers',
  'Intended Audience :: Science/Research',
  'Operating System :: OS Independent',
  'Topic :: Software Development :: Build Tools',
  'Programming Language :: Python :: 3',
  'Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)',
]


[project.urls]
Homepage = "https://github.com/Nic30/hdlConvertorAst"
Documentation = "https://hdlconvertorast.readthedocs.io/en/latest/?badge=latest"
Repository = "https://github.com/Nic30/hdlConvertorAst.git"
"Bug Tracker" = "https://github.com/Nic30/hdlConvertorAst/issues"
